refactoring and fixing illumination charm